<resources>
    <string name="app_name">Tournament Architect</string>
    <string name="app_key">drnhvv07gtk5pvu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_tournament">CreateTournament</string>
    <string name="title_activity_edit_team">EditTeam</string>
    <string name="title_activity_flag_selection">FlagSelection</string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="title_activity_match_view">MatchView</string>
    <string name="title_activity_standings">StandingsActivity</string>
    <string name="title_activity_load_tournament">LoadTournament</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_flag_selection2">FlagSelection2</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="title_activity_home">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="help">Hello world!</string>

    <string name="vsText">vs.</string>
    <!-- Buttons Texts -->
    <string name="addText">Add</string>
    <string name="deleteText">Delete</string>
    <string name="saveText">Save</string>
    <string name="okText">OK</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <!-- Home Activity -->
    <string name="newTournamentText">New Tournament</string>
    <string name="loadTournamentText">Load Tournament</string>
    <!-- Create Tournament Activity -->
    <string name="tournamentNameText">Tournament Name</string>
    <string name="formatText">Format</string>
    <string name="roundRobinText">Round Robin</string>
    <string name="singleEliminationText">Single Elimination</string>
    <string name="combinationText">Combination</string>
    <string name="gamesPerTeamText">Games per team:</string>
    <string name="teamsText">Teams</string>
    <string name="startTournamentText">Start Tournament</string>
    <!-- Dropbox Sync Activity -->
    <string name="dropboxSyncText">Dropbox Sync</string>
    <string name="activateSyncingText">Activate Syncing</string>
    <string name="deactivateSyncingText">Deactivate Syncing</string>
    <string name="logInText">Log In</string>
    <string name="logOutText">Log Out</string>
    <string name="uploadText">Upload</string>
    <string name="downloadText">Download</string>
    <!-- Edit Team Activity -->
    <string name="changeLogoText">Change Logo</string>
    <string name="teamNameText">Team Name</string>
    <string name="saveTeamText">Save Team</string>
    <string name="deleteTeamText">Delete Team</string>
    <!-- Flag Selection Activity -->
    <string name="chooseLogoText">Choose Logo</string>
    <!-- Match View Activity -->
    <string name="matchText">Match</string>
    <!-- Matches Activity -->
    <string name="matchesText">Matches</string>
    <!-- Rounds Activity -->
    <string name="roundsText">Rounds</string>
    <!-- Standings Activity -->
    <string name="standingsText">Standings</string>
    <!-- Alert Texts -->
    <string name="numTeamsRequirement">Starting a tournament requires at least 3 teams.</string>
    <string name="confirmDeleteTournament">Are you sure you want to delete this tournament?</string>
    <!-- List Texts -->
    <string name="scoreText">Score:</string>
</resources>
