<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/dropboxSyncText"
            android:id="@+id/dropoxSyncTextView"
            android:layout_gravity="center_horizontal"
            android:autoText="true"
            android:textSize="28sp"
            android:layout_weight="1"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="#E48700" />

        <ToggleButton
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="28sp"
            android:textOff="@string/activateSyncingText"
            android:textOn="@string/deactivateSyncingText"
            android:id="@+id/activationToggleButton"
            android:onClick="activationToggleButtonOnClick"
            style="@style/ToggleHoloColors"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/loggedInAsTextView"
            android:layout_gravity="center_horizontal"
            android:autoText="true"
            android:textSize="22sp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="false" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/logInText"
            android:id="@+id/logInButton"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:layout_weight="1"
            android:onClick="logInOnClick"
            android:singleLine="false"
            style="@style/ButtonHoloColors" />

        <Button
            style="@style/ButtonHoloColors"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/logOutText"
            android:id="@+id/logOutButton"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:layout_weight="1"
            android:onClick="logOutOnClick"
            android:singleLine="false" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Button
            style="@style/ButtonHoloColors"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/uploadText"
            android:id="@+id/uploadButton"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:layout_weight="1"
            android:onClick="uploadOnClick"
            android:singleLine="false" />

        <Button
            style="@style/ButtonHoloColors"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/downloadText"
            android:id="@+id/downloadButton"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:layout_weight="1"
            android:onClick="downloadOnClick"
            android:singleLine="false" />

    </LinearLayout>
</RelativeLayout>
